# efr32_base

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bootstrap.sh
libs/silabs/: CMakeLists.txt
src/: CMakeLists.txt  main.c  startup_cortexM4.c
